bad/incr_binop_aneq.example_compiler_output
ERROR
[1mbad/incr_binop_aneq.lat:5:13: [1;31merror: [0;1mexpression is not assignable[m
	(x == null)++;
	           [1;32m^[m
[1mbad/incr_binop_aneq.lat:5:2: [1;34mnote: [0;1mexpression starts here[m
	(x == null)++;
	[1;32m^[m
